--- a/W7_Project_final_draft.ipynb
+++ b/W7_Project_final_draft.ipynb
@@ -41,9 +41,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "**Fech the dataset.**"
+    "**Fetch the dataset.**"
    ]
   },
   {
@@ -54,6 +56,8 @@
    },
    "outputs": [],
    "source": [
+    "# Dataset sorce : (https://www.kaggle.com/prashdash112/lending-club-loan-two-new-version)\n",
+    "\n",
     "df= pd.read_csv(\"lending_club_loan_two.csv\")"
    ]
   },
@@ -1833,55 +1837,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size = 0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "235107"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100761"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -1907,6 +1862,7 @@
     }
    ],
    "source": [
+    "# Used transformation values from the PCA to fit the model\n",
     "model.fit(X,y)"
    ]
   },
